maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:6: error: value && is not a member of Int
    	if (I=0 && !estFaceMur()) {
                ^RandomMouseMaze:6: error: type mismatch;
 found   : Unit
 required: Boolean
    	if (I=0 && !estFaceMur()) {
             ^RandomMouseMaze:8: error: type mismatch;
 found   : Unit
 required: Boolean
    	} else if (I=1) {
                    ^RandomMouseMaze:10: error: type mismatch;
 found   : Unit
 required: Boolean
    	} else if (I=2) {
                    ^