maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
   var I=0
    while (!estSurBiscuit) {
    	I=random3();
    	if (I=0 && !estFaceMur()) {
    		avance();
    	} else if (I=1) {
    		gauche();
    	} else if (I=2) {
    		droite();
    	}
    }
    prendBiscuit();
}
